--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,27 @@ on:
   push:
     branches:
     - main
-
 jobs:
+  build-webapp:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.100-rc.1.20452.10
+    - name: Install dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build --configuration Release --no-restore
+    - name: Test
+      run: dotnet test --no-restore --verbosity normal
+    - name: dotnet publish
+      run: |
+        dotnet publish -c Release -o dotnetcorewebapp 
 
   CreateAzureVM:
+    needs: build-webapp
     runs-on: windows-2019
     
     steps:
@@ -23,4 +40,3 @@ jobs:
         AZURE_SUBSCRIPTION_NAME: ${{ secrets.AZURE_SUBSCRIPTION_NAME }}
       run: pwsh -command ".\$GITHUB_WORKSPACE\create-vm-azure.ps1"
       shell: pwsh
-
